@@ -4094,7 +4094,7 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 		// Creates an array with all place UIDs which should be related to this
 		// event.
 		$placesOfTimeSlots = array();
-		/** @var tx_seminars_timeslot $organizer */
+		/** @var Tx_Seminars_OldModel_TimeSlot $timeSlot */
 		foreach ($timeSlotBag as $timeSlot) {
 			if ($timeSlot->hasPlace()) {
 				$placesOfTimeSlots[] = $timeSlot->getPlace();
@@ -4149,7 +4149,7 @@ class tx_seminars_seminar extends Tx_Seminars_OldModel_AbstractTimeSpan {
 			'tx_seminars_timeslots.begin_date ASC'
 		);
 
-		/** @var tx_seminars_timeslot $organizer */
+		/** @var Tx_Seminars_OldModel_TimeSlot $timeSlot */
 		foreach ($timeSlotBag as $timeSlot) {
 			$result[] = array(
 				'uid' => $timeSlot->getUid(),
