@@ -14,7 +14,6 @@ return array(
 	'tx_seminars_seminar' => $extensionPath . 'Classes/class.tx_seminars_seminar.php',
 	'tx_seminars_speaker' => $extensionPath . 'Classes/class.tx_seminars_speaker.php',
 	'tx_seminars_tcemainprocdm' => $extensionPath . 'Classes/class.tx_seminars_tcemain.php',
-	'tx_seminars_timeslot' => $extensionPath . 'Classes/class.tx_seminars_timeslot.php',
 	'tx_seminars_backend_abstracteventmailform' => $extensionPath . 'Classes/BackEnd/AbstractEventMailForm.php',
 	'tx_seminars_backend_abstractlist' => $extensionPath . 'Classes/BackEnd/AbstractList.php',
 	'tx_seminars_backend_canceleventmailform' => $extensionPath . 'Classes/BackEnd/CancelEventMailForm.php',
@@ -108,6 +107,7 @@ return array(
 	'tx_seminars_oldmodel_abstracttimespan' => $extensionPath . 'Classes/OldModel/AbstractTimeSpan.php',
 	'tx_seminars_oldmodel_category' => $extensionPath . 'Classes/OldModel/Category.php',
 	'tx_seminars_oldmodel_organizer' => $extensionPath . 'Classes/OldModel/Organizer.php',
+	'tx_seminars_oldmodel_timeslot' => $extensionPath . 'Classes/OldModel/TimeSlot.php',
 	'tx_seminars_service_singleviewlinkbuilder' => $extensionPath . 'Classes/Service/SingleViewLinkBuilder.php',
 	'tx_seminars_cli_mailnotifier' => $extensionPath . 'Classes/cli/class.tx_seminars_cli_MailNotifier.php',
 	'tx_seminars_pi2' => $extensionPath . 'Classes/pi2/class.tx_seminars_pi2.php',
